# external_curl

./: .gitmodules  .travis.yml  CMakeLists.txt  Makefile-amd64_linux_gcc  Makefile-android_armeabi_gcc  Makefile-linux_i386_gcc  Makefile-macosx_amd64_clang  README.md  appveyor.yml  lookaside.txt
resources/: Makefile-alpine_amd64_gcc  Makefile-android_armeabi_gcc  Makefile-android_i386_gcc  Makefile-ios_i386_clang  Makefile-linux_amd64_clang  Makefile-linux_amd64_gcc  Makefile-linux_armcortexa7_gcc  Makefile-linux_armv6rpi_gcc  Makefile-linux_i386_gcc  Makefile-macosx_amd64_clang  Makefile-windows_amd64_msvc  Makefile-windows_i386_msvc  macros.cmake  pkg-config.in
resources/curl_7290_cmake/: CMakeLists.txt
resources/curl_7290_cmake/include_android_i386_gcc/: curl_config.h
resources/curl_7290_cmake/include_linux_amd64_gcc/: curl_config.h
resources/curl_7290_cmake/include_macosx_amd64_clang/: curl_config.h
resources/curl_7290_cmake/include_windows_amd64_msvc/curl/: curl.h
resources/curl_cmake/: CMakeLists.txt
resources/curl_cmake/include_linux_amd64_gcc/: curl_config.h
resources/windows/: MakefileBuild.vc
test/: CMakeLists.txt  curl_test.cpp
